2004-05-20  Laurent Sansonetti  <lrz@gnome.org>

	* lib/alexandria/preferences.rb:

	Added with a single implementation using GConf.
	  
	* lib/alexandria.rb:

	Required preferences.rb and added an URL which leads to the
	RubyForge bug tracker.

	* lib/alexandria/ui/main_app.rb:

	- Saves and restores preferences (window position and size,
	  whether toolbar, statusbar and sidepane are active, and whether
	  the books are viewed as icons or list) ;

	- Implemented the 'report_bug' handler, where the default web
	  browser is started. 

	* data/alexandria/glade/main_app.glade:

	- Embed the sidepane's header in a Gtk::Frame (like Evolution) ;
	- Added a toolbar separator between "Refresh" and "View as Icons|List". 

2004-05-18  Laurent Sansonetti  <lrz@gnome.org>

	* data/alexandria/glade/main_app.glade,
	  lib/alexandria/ui/main_app.rb:

	Added a close button in the sidepane's header.

2004-05-17  Laurent Sansonetti  <lrz@gnome.org>

	* lib/alexandria/book.rb:
	
	Fixed encoding problems in the Amazon provider,
	which seems to encode strings in UTF-8 twice (?!). 

	* lib/alexandria.rb:

	Sets $DEBUG if ENV['DEBUG'] is defined.

	* lib/alexandria/ui/new_book_dialog.rb:

	Removed code to handle EINVAL exception, this was
	a workaround for a FreeBSD bug which seems to have
	disappeared.

2004-05-15  Laurent Sansonetti  <lrz@gnome.org>

	* data/alexandria/glade/preferences_dialog.glade:

	Added a "General" tab in which you can configure
	visible columns for the "View as List" mode.

	* lib/alexandria/book.rb:

	Removed bad tabulations.

	* lib/alexandria/ui/main_app.rb,
	  data/alexandria/glade/main_app.glade:

	- Fixed bad signals and added "Help/Submit Bug Report",
	  which is still not implemented yet ;
	- Don't clear the iconlist if it's empty (to avoid a
	  GLib warning).

2004-04-30  Laurent Sansonetti  <lrz@gnome.org>

	* data/alexandria/glade/info_book_dialog.glade,
	  data/alexandria/glade/new_book_dialog.glade,