@@ -1,3 +1,10 @@
+2004-05-21  Laurent Sansonetti  <lrz@gnome.org>
+
+	* lib/alexandria/ui/main_app.rb:
+
+	Saves and restores sidepane slider position and the last selected
+	library.
+
 2004-05-20  Laurent Sansonetti  <lrz@gnome.org>
 
 	* lib/alexandria/preferences.rb:
